post_detail.html 생성 및 url경로 설정

--- a/django/templates/blog/post_list.html
+++ b/django/templates/blog/post_list.html
@@ -5,7 +5,23 @@
     <title>DjangoGirls Tutorial</title>
 </head>
 <body>
-    <h1>Post List</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque enim esse facere perferendis, ratione ut veniam voluptate. Eligendi laboriosam, nam! Accusamus alias asperiores atque dolorum magnam mollitia odit, pariatur quas?</p>
+<div>
+    <h1><a href="">Django Girls Blog</a></h1>
+</div>
+
+<div>
+    <p>published: 14.06.2014, 12:14</p>
+    <h2><a href="">My first post</a></h2>
+    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida
+        at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
+        sit amet risus.</p>
+</div>
+
+<div>
+    <p>published: 14.06.2014, 12:14</p>
+    <h2><a href="">My second post</a></h2>
+    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida
+        at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+</div>
 </body>
 </html>
