--- a/django/templates/blog/post_list.html
+++ b/django/templates/blog/post_list.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>DjangoGirls Tutorial</title>
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/css/blog.css">
 </head>
 <body>
-<div>
-    <h1><a href="">Django Girls Blog</a></h1>
+<div class="container">
+    <div>
+        <h1><a href="">Django Girls Blog</a></h1>
+        {% for post in posts %}
+        <div>{{ post.title }}</div>
+        {% endfor %}
+    </div>
     {% for post in posts %}
-    <div>{{ post.title }}</div>
-    {% endfor %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <!--<p>{{ post.content|linebreaksbr }}</p>-->
+        <p>{{ post.content|linebreaksbr|truncatewords:30 }}</p>
+    </div>
 </div>
-{% for post in posts %}
-<div>
-    <p>published: {{ post.published_date }}</p>
-    <h2><a href="">{{ post.title }}</a></h2>
-    <p>{{ post.content|linebreaksbr }}</p>
-</div>
+</body>
 {% endfor %}
 </body>
 </html>
