--- a/django/templates/blog/post_list.html
+++ b/django/templates/blog/post_list.html
@@ -1,28 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>DjangoGirls Tutorial</title>
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/blog.css">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <!--<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">-->
+    <!--<link rel="stylesheet" href="/static/css/blog.css">-->
 </head>
 <body>
 <div class="container">
-    <div>
-        <h1><a href="">Django Girls Blog</a></h1>
-        {% for post in posts %}
-        <div>{{ post.title }}</div>
-        {% endfor %}
+    <div class="header">
+        <div>
+            <h1><a href="">Django Girls Blog</a></h1>
+        </div>
     </div>
     {% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h2><a href="">{{ post.title }}</a></h2>
+    <div class="post">
+        <p class="post-date">published: {{ post.published_date }}</p>
+        <h2 class="post-title"><a href="">{{ post.title }}</a></h2>
         <!--<p>{{ post.content|linebreaksbr }}</p>-->
-        <p>{{ post.content|linebreaksbr|truncatewords:30 }}</p>
+        <p class="post-content">{{ post.content|linebreaksbr|truncatewords:30 }}</p>
     </div>
+    {% endfor %}
 </div>
-</body>
-{% endfor %}
 </body>
 </html>
