post_detail에 동적으로 pk값을 URL을 통해 받을 수 있도록 처리

--- a/django/templates/blog/post_detail.html
+++ b/django/templates/blog/post_detail.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<!doctype html>
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Post Detail</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>DjangoGirls Tutorial</title>
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <!--<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">-->
+    <!--<link rel="stylesheet" href="/static/css/blog.css">-->
+    <!--원래 이런 것이었음.-->
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores deserunt incidunt modi nobis tempora veniam! Aspernatur cumque error esse maiores mollitia pariatur qui reprehenderit sunt. Asperiores explicabo maxime rem.</h1>
+    <div class="header">
+        <div class="container">
+            <h1><a href="">Django Girls Blog</a></h1>
+        </div>
+    </div>
+    <div class="container">
+        <div class="post">
+            <p class="post-date">published: {{ post.published_date }}</p>
+            <h2 class="post-title"><a href="">{{ post.title }}</a></h2>
+            <p class="post-content">{{ post.content|linebreaksbr|truncatewords:30 }}</p>
+        </div>
+    </div>
 </body>
 </html>
