--- a/django/templates/blog/post_list.html
+++ b/django/templates/blog/post_list.html
@@ -1,29 +1,32 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DjangoGirls Tutorial</title>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     <!--<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">-->
     <!--<link rel="stylesheet" href="/static/css/blog.css">-->
+    <!--원래 이런 것이었음.-->
 </head>
 <body>
-<div class="container">
     <div class="header">
-        <div>
+        <div class="container">
             <h1><a href="">Django Girls Blog</a></h1>
         </div>
     </div>
-    {% for post in posts %}
-    <div class="post">
-        <p class="post-date">published: {{ post.published_date }}</p>
-        <h2 class="post-title"><a href="">{{ post.title }}</a></h2>
-        <!--<p>{{ post.content|linebreaksbr }}</p>-->
-        <p class="post-content">{{ post.content|linebreaksbr|truncatewords:30 }}</p>
+    <div class="container">
+        {% for post in posts %}
+        <div class="post">
+            <p class="post-date">published: {{ post.published_date }}</p>
+            <h2 class="post-title"><a href="">{{ post.title }}</a></h2>
+            <p class="post-content">{{ post.content|linebreaksbr|truncatewords:30 }}</p>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
 </body>
 </html>
