--- a/django/templates/blog/post_list.html
+++ b/django/templates/blog/post_list.html
@@ -9,13 +9,14 @@
     <title>DjangoGirls Tutorial</title>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <!--<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">-->
-    <!--<link rel="stylesheet" href="/static/css/blog.css">-->
-    <!--원래 이런 것이었음.-->
+{#    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">#}
+{#    <link rel="stylesheet" href="/static/css/blog.css">#}
+
 </head>
 <body>
     <div class="header">
         <div class="container">
+{#            <h1><a href="{%  url 'post-list' %}">Django Girls Blog</a></h1>#}
             <h1><a href="">Django Girls Blog</a></h1>
         </div>
     </div>
@@ -23,7 +24,9 @@
         {% for post in posts %}
         <div class="post">
             <p class="post-date">published: {{ post.published_date }}</p>
-            <h2 class="post-title"><a href="">{{ post.title }}</a></h2>
+{#            <h2 class="post-title"><a href="/{{ post.pk }}">{{ post.title }}</a></h2>#}
+            <h2 class="post-title"><a href="{%  url 'post-detail' pk=post.pk %}">{{ post.title }}</a></h2>
+
             <p class="post-content">{{ post.content|linebreaksbr|truncatewords:30 }}</p>
         </div>
         {% endfor %}
