--- a/django/templates/blog/post_detail.html
+++ b/django/templates/blog/post_detail.html
@@ -1,33 +1,13 @@
-{% load static %}
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DjangoGirls Tutorial</title>
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-{#    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">#}
-{#    <link rel="stylesheet" href="/static/css/blog.css">#}
-{#    원래 이런 것이었음.#}
-</head>
-<body>
-    <div class="header">
-        <div class="container">
-            <h1><a href="">Django Girls Blog</a></h1>
-        </div>
+
+{% extends 'base.html' %}
+
+{% block content %}
+    <div class="post">
+        <p class="post-date">published: {{ post.published_date }}</p>
+        <h2 class="post-title"><a href="">{{ post.title }}</a></h2>
+        <p class="post-content full">{{ post.content|linebreaksbr }}</p>
+        <a href="{% url 'blog:post-delete' pk=post.pk %}">
+            <button>delete</button>
+        </a>
     </div>
-    <div class="container">
-{#        {% for post in posts %}#}
-{#        객체 하나이기 때문에 for문이 필요가 없어짐#}
-        <div class="post">
-            <p class="post-date">published: {{ post.published_date }}</p>
-            <h2 class="post-title"><a href="">{{ post.title }}</a></h2>
-            <p class="post-content full">{{ post.content|linebreaksbr }}</p>
-        </div>
-{#        {% endfor %}#}
-    </div>
-</body>
-</html>
+{% endblock %}
