--- a/django/templates/blog/post_list.html
+++ b/django/templates/blog/post_list.html
@@ -1,35 +1,22 @@
-{% load static %}
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DjangoGirls Tutorial</title>
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-{#    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">#}
-{#    <link rel="stylesheet" href="/static/css/blog.css">#}
 
-</head>
-<body>
-    <div class="header">
-        <div class="container">
-{#            <h1><a href="{%  url 'post-list' %}">Django Girls Blog</a></h1>#}
-            <h1><a href="">Django Girls Blog</a></h1>
-        </div>
-    </div>
-    <div class="container">
-        {% for post in posts %}
+{% extends 'base.html' %}
+
+{#template를 기준으로 삼음#}
+{#예를들어 blog안에 base.html이 있으면#}
+{#extends 'blog/base.html'로 해야됨#}
+
+
+{% block content %}
+    {% for post in posts %}
         <div class="post">
             <p class="post-date">published: {{ post.published_date }}</p>
-{#            <h2 class="post-title"><a href="/{{ post.pk }}">{{ post.title }}</a></h2>#}
-            <h2 class="post-title"><a href="{%  url 'post-detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            {#            <h2 class="post-title"><a href="/{{ post.pk }}">{{ post.title }}</a></h2>#}
 
+            {#            네임스페이스 없이 수업에서 한것#}
+            {#            <h2 class="post-title"><a href="{% url 'post-detail' pk=post.pk %}">{{ post.title }}</a></h2>#}
+            <h2 class="post-title"><a href="{% url 'blog:post-detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p class="post-content">{{ post.content|linebreaksbr|truncatewords:30 }}</p>
+            <button><a href="{% url 'blog:post-delete' pk=post.pk %}"></a>delete</button>
         </div>
-        {% endfor %}
-    </div>
-</body>
-</html>
+    {% endfor %}
+{% endblock %}
