post_add view, url, template생성 및 base.html에서 연결 링크 구현

--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -22,9 +22,14 @@
         <div class="container">
 {#            <h1><a href="{%  url 'post-list' %}">Django Girls Blog</a></h1>#}
             <h1><a href="">Django Girls Blog</a></h1>
+
+            <a href="{% url 'blog:post-add' %}"
+            class="btn btn-primary">글작성</a>
+
         </div>
     </div>
     <div class="container">
+    <h2>{% block title %}{%  endblock %}</h2>
     {%  block content %}
 
 {#################################################}
