--- a/django/templates/blog/post_detail.html
+++ b/django/templates/blog/post_detail.html
@@ -1,6 +1,8 @@
 
 {% extends 'base.html' %}
 
+{% block title %}Post detail{% endblock %}
+
 {% block content %}
     <div class="post">
         <p class="post-date">published: {{ post.published_date }}</p>
