--- a/django/templates/blog/post_detail.html
+++ b/django/templates/blog/post_detail.html
@@ -7,9 +7,15 @@
         <p class="post-date">published: {{ post.published_date }}</p>
         <h2 class="post-title"><a href="">{{ post.title }}</a></h2>
         <p class="post-content full">{{ post.content|linebreaksbr }}</p>
-        <form action="{% url 'blog:post-delete' pk=post.pk %}" method="POST">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-danger">삭제하기</button>
-        </form>
+
+
+        <div class="btn-container">
+            <a href="{% url 'blog:post-edit' pk=post.pk %}" class="btn btn-primary">EDIT</a>
+            <form action="{% url 'blog:post-delete' pk=post.pk %}"
+                  method="POST" class="inline">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger">삭제하기</button>
+            </form>
+        </div>
     </div>
 {% endblock %}
